[project]
name = "ai-engineer-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Imran Pollob", email = "polboy777@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "catboost>=1.2.10",
    "datasets>=4.7.0",
    "imbalanced-learn>=0.14.1",
    "lightgbm>=4.6.0",
    "markdown-exec>=1.12.1",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
